# Bazel-Example

./: .gitignore  README.md
BazelDemo/: .bazeliskrc  .bazelrc  BUILD  Podfile  WORKSPACE  custom_schemes.bzl  framework.bzl
BazelDemo/BarStaticLib/: BUILD.bazel  Bar.swift
BazelDemo/BazelDemo/: AppDelegate.swift  Info-Release.plist  Info.plist  SceneDelegate.swift  User.swift  ViewController.swift
BazelDemo/BazelDemo.xcworkspace/: contents.xcworkspacedata
BazelDemo/BazelDemo/Base.lproj/: Main.storyboard
BazelDemo/BazelDemoTests/: BazelDemoTests.swift
BazelDemo/BazelDemoUITests/: BazelDemoUITests.swift  BazelDemoUITestsLaunchTests.swift
BazelDemo/Entitlements/: Alpha.entitlements  Debug.entitlements  Release.entitlements
BazelDemo/FooDynamicFramework/: BUILD.bazel  Foo.swift
BazelDemo/GCDTimeManager/: BUILD.bazel  GCDTimeManager-umbrella.h  module.modulemap
BazelDemo/MyFramework/: Info.plist
BazelDemo/ObjCLib/: BUILD.bazel
BazelDemo/ObjCLib/Sources/: MyHeader.m
BazelDemo/ObjCLib/Sources/Headers/: DemoHeader.h  MyHeader.h
BazelDemo/Resources/: GoogleService-Info.plist
BazelDemo/Resources/Debug/: GoogleService-Info.plist
BazelDemo/SubProjFramework/SubProjFramework/: SubProjFrameworkClass.swift
BazelDemo/TimeManager/: BUILD.bazel
BazelDemo/TimeManager/TImeManager.xcframework/: Info.plist
BazelDemo/TimeManager/TImeManager.xcframework/ios-arm64/TImeManager.framework/: Info.plist  TImeManager
BazelDemo/TimeManager/TImeManager.xcframework/ios-arm64_x86_64-simulator/TImeManager.framework/: Info.plist  TImeManager
(+13 files in other folders)
